--- a/jupyter-client/pom.xml
+++ b/jupyter-client/pom.xml
@@ -66,7 +66,7 @@
               <goal>generate</goal>
             </goals>
             <configuration>
-              <inputSpec>${notebook.services.spec}</inputSpec>
+              <inputSpec>${jupyter-server.spec}</inputSpec>
               <generatorName>java</generatorName>
               <library>native</library>
               <importMappings>JsonNode=com.fasterxml.jackson.databind.JsonNode</importMappings>
