--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>dev.hcf.ganymede</groupId>
   <artifactId>parent</artifactId>
-  <version>2.1.2-SNAPSHOT</version>
+  <version>2.2.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>${project.groupId}:${project.artifactId}</name>
   <description>Ganymede Parent POM</description>
@@ -118,9 +118,10 @@
     <jupyter-server.version>v2.5.0</jupyter-server.version>
     <jupyter-server.spec>https://github.com/jupyter-server/jupyter_server/raw/${jupyter-server.version}/jupyter_server/services/api/api.yaml</jupyter-server.spec>
 
-    <spark.version>3.3.2</spark.version>
+    <spark.version>3.4.0</spark.version>
     <scala.binary.version>2.12</scala.binary.version>
-    <scala.version>${scala.binary.version}.15</scala.version>
+    <scala.version>${scala.binary.version}.17</scala.version>
+    <jackson-bom.version>2.14.2</jackson-bom.version>
     <jackson.version>${jackson-bom.version}</jackson.version>
 
     <openapi-generator-maven-plugin.version>6.6.0</openapi-generator-maven-plugin.version>
