--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>dev.hcf.ganymede</groupId>
   <artifactId>parent</artifactId>
-  <version>2.1.2.20230910</version>
+  <version>2.2.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>${project.groupId}:${project.artifactId}</name>
   <description>Ganymede Parent POM</description>
@@ -123,9 +123,10 @@
 
     <maven.version>3.9.4</maven.version>
 
-    <spark.version>3.3.3</spark.version>
+    <spark.version>3.4.1</spark.version>
     <scala.binary.version>2.12</scala.binary.version>
     <scala.version>${scala.binary.version}.18</scala.version>
+    <jackson-bom.version>2.14.2</jackson-bom.version>
     <jackson.version>${jackson-bom.version}</jackson.version>
 
     <openapi-generator-maven-plugin.version>6.6.0</openapi-generator-maven-plugin.version>
