--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,9 @@
     <jupyter-server.version>v2.7.0</jupyter-server.version>
     <jupyter-server.spec>https://github.com/jupyter-server/jupyter_server/raw/${jupyter-server.version}/jupyter_server/services/api/api.yaml</jupyter-server.spec>
 
+    <jupyterlab-server.version>v2.23.0</jupyterlab-server.version>
+    <jupyterlab-server.spec>https://github.com/jupyterlab/jupyterlab_server/raw/${jupyterlab-server.version}/jupyterlab_server/rest-api.yml</jupyterlab-server.spec>
+
     <spark.version>3.3.2</spark.version>
     <scala.binary.version>2.12</scala.binary.version>
     <scala.version>${scala.binary.version}.15</scala.version>
@@ -135,6 +138,7 @@
     <module>ganymede-kernel</module>
     <module>ganymede-notebook</module>
     <module>jupyter-client</module>
+    <module>jupyterlab-client</module>
   </modules>
   <dependencyManagement>
     <dependencies>
