--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
   <parent>
     <groupId>dev.hcf.ball</groupId>
     <artifactId>parent</artifactId>
-    <version>2023.1.5</version>
+    <version>2023.1.6-SNAPSHOT</version>
     <relativePath/>
   </parent>
   <organization>
@@ -127,9 +127,6 @@
     <jackson.version>${jackson-bom.version}</jackson.version>
 
     <openapi-generator-maven-plugin.version>6.6.0</openapi-generator-maven-plugin.version>
-
-    <commons-lang3.version>3.13.0</commons-lang3.version>
-    <resolverVersion>1.9.14</resolverVersion>
 
     <commonmark.version>0.21.0</commonmark.version>
     <jeromq.version>0.5.3</jeromq.version>
