--- a/ganymede-kernel/pom.xml
+++ b/ganymede-kernel/pom.xml
@@ -109,6 +109,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.maven.resolver</groupId>
+      <artifactId>maven-resolver-supplier</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.resolver</groupId>
       <artifactId>maven-resolver-util</artifactId>
     </dependency>
     <dependency>
