--- a/jupyterlab-client/pom.xml
+++ b/jupyterlab-client/pom.xml
@@ -31,7 +31,7 @@
   <parent>
     <groupId>dev.hcf.ganymede</groupId>
     <artifactId>parent</artifactId>
-    <version>2.1.2.20230910</version>
+    <version>2.2.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <properties>
