--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
   <parent>
     <groupId>dev.hcf.ball</groupId>
     <artifactId>parent</artifactId>
-    <version>2023.1.6-SNAPSHOT</version>
+    <version>2023.1.6</version>
     <relativePath/>
   </parent>
   <organization>
